B-F Sandbox Full-Backup/src/objects/Course_Details__c.object
<CustomObject>
    <description>Used in conjunction with Degree Declaration and Tuition Reimbursement Objects to make up the Tuition Reimbursement Application.</description>
    <fields>
        <fullName>Course__c</fullName>
        <inlineHelpText>Enter Course #</inlineHelpText>
        <label>Course#</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cumulative_Hrs__c</fullName>
        <inlineHelpText>Enter Cumulative Hours</inlineHelpText>
        <label>Cumulative Hrs</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hrs__c</fullName>
        <inlineHelpText>Enter Hours</inlineHelpText>
        <label>Hrs</label>
        <precision>18</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tuition_Refund__c</fullName>
        <label>Tuition Refund</label>
        <referenceTo>Tuition_Refund__c</referenceTo>
        <relationshipLabel>Course Details</relationshipLabel>
        <relationshipName>Course_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tuition__c</fullName>
        <inlineHelpText>Enter Tuition Amount</inlineHelpText>
        <label>Tuition</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Course Details</label>
    <nameField>
        <label>Course Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>